<resources>
    <string name="app_name">TeamProgramming2020</string>
  
    <string name="kito_name_title">名前</string>
    <string name="kito_class_title">クラス</string>
    <string name="kito_favorite_title">好きなもの</string>
    <string name="kito_hate_title">嫌いなもの</string>

    <string name="minato_name_title">名前</string>
    <string name="minato_class_title">クラス</string>
    <string name="minato_favor_title">好きなもの</string>
    <string name="minato_hate_title">嫌いなもの</string>

    <string name="app_yagami_name_title">名前</string>
    <string name="app_yagami_class_title">クラス</string>
    <string name="app_yagami_fovorite_title">好きなもの</string>
    <string name="app_yagami_hate_title">嫌いなもの</string>

    <string name="textView_go_name_title">名前</string>
    <string name="textView_go_class_title">クラス</string>
    <string name="textView_go_favor_title">好きなもの</string>
    <string name="textView_hate_title">嫌いなもの</string>

    <string name="Haruki_name_title">名前</string>
    <string name="Haruki_class_title">クラス</string>
    <string name="Haruki_favor_title">好きなもの</string>
    <string name="Haruki_hate_title">嫌いなもの</string>

    <string name="soma_name_titie">名前</string>
    <string name="soma_class_title">クラス</string>
    <string name="soma_favor_title">好きなもの</string>
    <string name="soma_hate_title">嫌いなもの</string>

    <string name="hiroyuki_name_title">名前</string>
    <string name="hiroyuki_class_title">クラス</string>
    <string name="hiroyuki_favor_title">好きなもの</string>
    <string name="hiroyuki_hate_title">嫌いなもの</string>
</resources>
