<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Soma.SomaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_soma_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soma_name_titie" />

        <TextView
            android:id="@+id/textView_soma_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_soma_class_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soma_class_title" />

        <TextView
            android:id="@+id/textView_soma_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_soma_favor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soma_favor_title" />

        <TextView
            android:id="@+id/textView_soma_favor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_soma_hate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soma_hate_title" />

        <TextView
            android:id="@+id/textView_soma_hate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>