<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kenta.KitoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_kito_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kito_name_title" />

        <TextView
            android:id="@+id/textView_kito_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_kito_class_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kito_class_title" />

        <TextView
            android:id="@+id/textView_kito_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_kito_favorite_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kito_favorite_title" />

        <TextView
            android:id="@+id/textView_kito_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_kito_hate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kito_hate_title" />

        <TextView
            android:id="@+id/textView_kito_hate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>