<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Go.GoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_go_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_go_name_title" />

        <TextView
            android:id="@+id/textView_go_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_go_class_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_go_class_title" />

        <TextView
            android:id="@+id/textView_go_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_go_favor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_go_favor_title" />

        <TextView
            android:id="@+id/textView_go_favor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_hate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_hate_title" />

        <TextView
            android:id="@+id/textView_hate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>