<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Haruki.HarukiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_Haruki_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Haruki_name_title" />

        <TextView
            android:id="@+id/textView_Haruki_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_Haruki_class_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Haruki_class_title" />

        <TextView
            android:id="@+id/textView_Haruki_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_Haruki_favor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Haruki_favor_title" />

        <TextView
            android:id="@+id/textView_Haruki_favor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_Haruki_hate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Haruki_hate_title" />

        <TextView
            android:id="@+id/textView_Haruki_hate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>