<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Yagami.Yagamiactivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_yagami_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_yagami_name_title" />

        <TextView
            android:id="@+id/textView_yagami_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_yagami_class_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_yagami_class_title" />

        <TextView
            android:id="@+id/textView_yagami_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_yagami_favorite_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_yagami_fovorite_title" />

        <TextView
            android:id="@+id/textView_yagami_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_yagami_hate_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_yagami_hate_title" />

        <TextView
            android:id="@+id/textView_yagami_hate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>